# fileops-core

./: .gitignore  README.md  config.sample.yaml
.github/workflows/: ci.yml
config/: config.sample.yaml
setsup/: .dockerignore  __init__.py  pyproject.toml  test_package_metadata.py
src/fileops/: cli.py  config.py  exceptions.py  logging_setup.py
src/fileops/events/: models.py
src/fileops/monitor/: __init__.py  base.py  watchdog_backend.py
src/fileops/state/: sqlite_store.py  store.py
tests/unit/: test_config.py  test_logging.py  test_state_store.py  test_watchdog_backend.py
