[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileops-core"
version = "0.1.0"
description = "Configurable folder monitoring utility with structured audit logging"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ThynkFurther Tech" }]

dependencies = [
    "watchdog>=4.0,<5.0",
    "pydantic>=2.6,<3.0",
    "PyYAML>=6.0,<7.0",
    "typer>=0.12,<1.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-cov>=5.0,<6.0",
    "freezegun>=1.5,<2.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "build>=1.2,<2.0",
]

[project.scripts]
fileops = "fileops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
# ANN (missing type annotations) is intentionally excluded from lint scope:
# mypy already enforces typing with richer context (generics, overloads) than
# ruff's annotation checks, so enabling both would only produce duplicate noise.

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true
